# MulticanonicalIsingCpp

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  requiments.txt  setup.cfg  setup.py
.github/workflows/: cpp_test.yml  python_test.yml
dependencies/: FetchPybind11.cmake
experiments/: run.py  run_all.py  run_wl.py
include/: CMakeLists.txt  all.hpp
include/algorithm/: multicanonical.hpp  parameters.hpp  util.hpp  wang_landau.hpp
include/model/: p_body_ising.hpp
muca/: CMakeLists.txt  __init__.py
muca/algorithm/: __init__.py  multicanonical.py  parameters.py  util.py  wang_landau.py
muca/cpp_muca/: pybind_main.cpp
muca/cpp_muca/include/: pybind_algorithm.hpp  pybind_model.hpp
muca/model/: caster.py  p_body_ising.py
muca/results/: analysis.py  simulation_result.py
notebooks/: HEAT_BATH_VS_METROPOLIS_accuracy.ipynb  HEAT_BATH_VS_METROPOLIS_speed.ipynb  SYMMETRIC_VS_NORMAL_accuracy.ipynb  SYMMETRIC_VS_NORMAL_speed.ipynb  multicanonical.ipynb  wang_landau.ipynb
tests/: CMakeLists.txt
tests/cpp_tests/: cpp_test  test_main.cpp
tests/cpp_tests/test_algorithm/: test_multicanonical.hpp  test_parameters.hpp  test_util.hpp  test_wang_landau.hpp
tests/cpp_tests/test_model/: test_p_body_ising.hpp
tests/data/: wl_p3_L6_S0.5.pkl
tests/py_tests/test_algorithm/: test_multicanonical.py  test_parameters.py  test_util.py  test_wang_landau.py
tests/py_tests/test_model/: test_p_body_ising.py
